# PineForge

./: .env.example  .gitignore  README.md  context.md  pyproject.toml  requirements.txt  test_connection.py
.claude/: settings.json
.claude/worktrees/epic-dirac/: pyproject.toml
.claude/worktrees/epic-dirac/examples/: momentum.pine  pullback_buyer.pine  xauusd_1h.csv
.claude/worktrees/epic-dirac/pineforge/: engine.py  interpreter.py
.claude/worktrees/epic-dirac/pineforge/live/: bridge.py
.claude/worktrees/epic-dirac/scripts/: fetch_trade_history.py
alembic/: env.py
api/: config.py  database.py  main.py  symbols.py
deploy/: pineforge-api.service  pineforge.service
examples/: gold_trend_hunter.pine  gold_trend_hunter_q001.pine  momentum.pine  momentum_long_short.pine  momentum_v2.pine  momentum_v4.pine  rapid_test_bot.pine  run_backtest.py  sma_crossover.pine  strategy_aggressive_trend_v3.pine  strategy_aggressive_trend_v3_q001.pine  strategy_bb_squeeze_rsi.pine  strategy_macd_bb.pine  strategy_momentum_atr.pine  strategy_regime_adaptive_v2.pine  strategy_trend_pullback.pine  strategy_ultimate_v3.pine  xauusd_buy_sell_arrow.pine
mt5bridge/: .env.example  Dockerfile  README.md  app.py  config.py  docker-compose.yml  entrypoint.sh  mt5_wrapper.py  requirements.txt  schemas.py
pineforge/: __main__.py  ast_nodes.py  broker.py  data.py  data_twelvedata.py  engine.py  execution_context.py  interpreter.py  lexer.py  parser.py  results.py  series.py
scripts/: setup_db.sh  show_transactions.py
strateg/: __init__.py  __main__.py  engine.py
worker/: README.md  (+7 more)
(+110 files in other folders)
